--- a/My_website/index.html
+++ b/My_website/index.html
@@ -8,7 +8,7 @@
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="https://www.w3schools.com/html/">w3school</a>
-    <a href="007.html">007
+    <a href="mine.html">mine
     <h1>  do you even Lift bro?!</h1>
     <img src="images/home.jpg" height="250">
   </body>
