--- a/My_website/portfolio.html
+++ b/My_website/portfolio.html
@@ -8,7 +8,7 @@
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="w3school.html">w3school</a>
-    <a href="007.html">007</a>
+    <a href="mine.html">mine</a>
     <h1>This is my website so get out bro, Do you even lift mr Nakmee!</h1>
     <img src="images/portfolio.jpg" height="250">
     <br>
