--- a/My_website/index.html
+++ b/My_website/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Comtek System</title>
   </head>
-  <body>
+  <body bgcolor="pink"></body>
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="https://www.w3schools.com/html/">w3school</a>
