--- a/My_website/index.html
+++ b/My_website/index.html
@@ -2,14 +2,49 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Comtek System</title>
+    <title>home page</title>
   </head>
   <body bgcolor="pink"></body>
-    <a href="index.html">Home</a>
-    <a href="portfolio.html">Portfolio</a>
-    <a href="https://www.w3schools.com/html/">w3school</a>
-    <a href="mine.html">mine
-    <h1>  do you even Lift bro?!</h1>
-    <img src="images/home.jpg" height="250">
+  <nav> 
+  <li><a href="index.html">Home Page</a></li>
+ <li><a href="portfolio.html">Portfolio</a></li> 
+ <li><a href="mine.html">My Website</a></li> 
+ </nav>
+ <p><b>Now you can go </b></p>
+<p><i>you can just look aroung, go </i></p>
+<p>just<sub> go</sub> you <sup>:)</sup></p>
+<body>
+
+
+
+
+
+  
+
+    <h1 style="text-align: center;">Joel's Home Page</h1>
+    <img src="images/hellcat.gif">
+    <body>
+
+<div class="Me">
+<h2>Fun Fact</h2>
+<p>I am 18.</p>
+<p>I work To much so i am always tired.</p>
+</div> 
+
+<div class="Me">
+<h2>Fun Fact 2</h2>
+<p>I was not Born in Us</p>
+<p>I came here when i was 8</p>
+
+</div>
+
+<div class="Me">
+<h2>Fun Fact 3</h2>
+<p>My favorite hobby is weight lifting.</p>
+<p>My heaviest lift are my deadlift which are at a 405lbs max</p>
+<p>My bench press is only at 225</p>
+</div>
+
+  
   </body>
 </html>
