--- a/My_website/portfolio.html
+++ b/My_website/portfolio.html
@@ -4,11 +4,12 @@
 	    <meta charset="utf-8">
 	    <title>Portfolio</title>
 	  </head>
-	  </body>
-    <a href="index.html">Home</a>
-    <a href="portfolio.html">Portfolio</a>
-    <a href="w3school.html">w3school</a>
-    <a href="mine.html">mine</a>
+	  <body bgcolor="red"></body>
+	 <nav>
+    <li><a href="index.html">Home</a></li>
+   <li><a href="portfolio.html">Portfolio</a></li> 
+    <li><a href="mine.html">MY Website</a></li>
+    </nav>
     <h1>This is my website so get out bro, Do you even lift mr Nakmee!</h1>
     <img src="images/portfolio.jpg" height="250">
     <br>
