--- a/My_website/mine.html
+++ b/My_website/mine.html
@@ -9,7 +9,7 @@
   </head>
   <body bgcolor="Pink"></body>
   <nav>
-    <li><a href="index.html">Home</a></li>
+    <li><a href="index.html">Home Page</a></li>
     <li><a href="portfolio.html">Portfolio</a></li>
     <li><a href="mine.html">My Website</a></li>
     </nav>
