--- a/My_website/portfolio.html
+++ b/My_website/portfolio.html
@@ -6,15 +6,18 @@
 	  </head>
 	  <body bgcolor="red"></body>
 	 <nav>
-    <li><a href="index.html">Home</a></li>
+    <li><a href="index.html">Home Page</a></li>
    <li><a href="portfolio.html">Portfolio</a></li> 
     <li><a href="mine.html">MY Website</a></li>
     </nav>
-    <h1>This is my website so get out bro, Do you even lift mr Nakmee!</h1>
+    <h1> Welcome to My Portfolio, you can check my work here and also my games</h1>
     <img src="images/portfolio.jpg" height="250">
     <br>
     <a target="_blank" href="https://scratch.mit.edu">
       <img src="image/scratchlogo" height="8000">
     </a>
+    <p><a href="https://scratch.mit.edu/projects/178539677/" Target"_blank">Raw sauce</a></p>
+    <img src="images/rawsauce.PNG" height="300">
+   
 	  </body>
 	</html>
