--- a/My_website/portfolio.html
+++ b/My_website/portfolio.html
@@ -16,8 +16,9 @@
     <a target="_blank" href="https://scratch.mit.edu">
       <img src="image/scratchlogo" height="8000">
     </a>
-    <p><a href="https://scratch.mit.edu/projects/178539677/" Target"_blank">Raw sauce</a></p>
-    <img src="images/rawsauce.PNG" height="300">
+    <h1> !.1.7 Activity with Scratch</h1>
+    <a href="https://scratch.mit.edu/projects/178539677/" Target"_blank"><img src="images/rawsauce.PNG" height="300"></a>
+    
    
 	  </body>
 	</html>
