--- a/My_website/portfolio.html
+++ b/My_website/portfolio.html
@@ -16,8 +16,17 @@
     <a target="_blank" href="https://scratch.mit.edu">
       <img src="image/scratchlogo" height="8000">
     </a>
-    <h1> !.1.7 Activity with Scratch</h1>
+    <h1> 1.1.7 Activity with Scratch</h1>
     <a href="https://scratch.mit.edu/projects/178539677/" Target"_blank"><img src="images/rawsauce.PNG" height="300"></a>
+    <center><p style="color:black"><b> Get The Gold</b></p></center>
+      <center><div class="item">
+    <a href="download/Getthegold.aia" download="">
+    <img src="images/yes.JPG" height="400">
+       
+    </a>
+     <center><p style="color:white"><b>Click image above to download app</b></p></center>
+    <div class="popup" attributes="#">
+    </div></center> 
     
    
 	  </body>
